force-app/main/default/objects/lightningbuddy__Welcome_Mat_Tile__c/lightningbuddy__Welcome_Mat_Tile__c.object-meta.xml
<CustomObject>
    <description>Represents a tile in the Welcome mat action</description>
    <label>Welcome Mat Tile</label>
    <nameField>
        <displayFormat>WMT-{000000}</displayFormat>
        <label>Welcome Mat Tile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Mat Tiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>