force-app/main/default/objects/lightningbuddy__Welcome_Mat_Tile__c/fields/lightningbuddy__Action__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Action__c</fullName>
    <label>Action</label>
    <referenceTo>lightningbuddy__Actions__c</referenceTo>
    <relationshipLabel>Welcome Mat Tiles</relationshipLabel>
    <relationshipName>Welcome_Mat_Tiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>