force-app/main/default/objects/lightningbuddy__Welcome_Mat_Tile__c/fields/lightningbuddy__Icon__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Icon__c</fullName>
    <label>Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>