force-app/main/default/objects/lightningbuddy__Welcome_Mat_Tile__c/fields/lightningbuddy__Link__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>