force-app/main/default/objects/lightningbuddy__Welcome_Mat_Tile__c/fields/lightningbuddy__Title__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>